--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,46 @@
+asn1crypto==0.24.0
+attrs==19.1.0
+Automat==0.7.0
+beautifulsoup4==4.8.0
+bs4==0.0.1
 certifi==2019.9.11
+cffi==1.12.3
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.7
+cssselect==1.1.0
+dukpy==0.2.2
+future==0.17.1
+hyperlink==19.0.0
 idna==2.8
+incremental==17.5.0
+javascripthon==0.10
+Jinja2==2.10.1
+jupyter-echarts-pypkg==0.1.2
+lml==0.0.2
+lxml==4.4.1
+macropy3==1.1.0b2
+MarkupSafe==1.1.1
+mysql-connector==2.2.9
+parsel==1.5.2
+Pillow==6.1.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
+pycparser==2.19
+PyDispatcher==2.0.5
+pyecharts==0.5.11
+pyecharts-javascripthon==0.0.6
+pyecharts-jupyter-installer==0.0.3
+PyHamcrest==1.9.0
+PyMySQL==0.9.3
+pyOpenSSL==19.0.0
+queuelib==1.5.0
 requests==2.22.0
-urllib3==1.25.5
+Scrapy==1.5.0
+service-identity==18.1.0
+six==1.12.0
+soupsieve==1.9.4
+Twisted==19.7.0
+urllib3==1.25.6
+w3lib==1.21.0
+zope.interface==4.6.0
